adding answers to pass the tests

--- a/index.html
+++ b/index.html
@@ -9,21 +9,31 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
 	<div>
 		<!-- header -->
 		<header>
-			<div>
-				BLOOMTECH BAR AND GRILL
-
+			
+				<h1>BLOOMTECH BAR AND GRILL</h1>
+                                <a href="index.html"></a>
 				<!-- nav -->
-				Menu
-				Reservations
-				Special Offers
-				Contact
-			</div>
+                                <nav>
+                                    <div>
+                                        <a href="menu.html">Menu</a> |
+                                        <a href="#Reservations">Reservations</a> |
+                                        <a href="#SpecialOffers">Special Offers</a> |
+                                        <a href="Contact">Contact</a>
+                                    </div>
+                                    <div class="the_socials">
+                                                <a id="facebook" href="https://www.facebook.com/BloomTech/" title="Find us on Facebook!"><i class="facebook"><img src="https://img.icons8.com/ios-glyphs/1.2x/E1F0E6/facebook.png" alt="Find us on facebook!"></a>
+						<a id="twitter" href="https://twitter.com/bloomtech" title="Find us on twitter!"><img src="https://img.icons8.com/material/1.5x/E1F0E6/twitter.png" alt="Find us on Twitter!"></a>
+						<a id="instagram" href="https://www.instagram.com/bloomtechofficial/" title="Find us on instagram!"><img src="https://img.icons8.com/material/1.5x/E1F0E6/instagram-new.png" alt="Find us on Instagram!" ></a>
+                                    </div>
+                                    </nav>
 		</header>
 
 		<!-- gallery section -->
@@ -31,23 +41,15 @@
 			<div>
 				<h2>OUR FOOD</h2>
 
-				img/food-avocadotoast.jpg
-
-				img/food-burger.jpg
-
-				img/food-poutine.jpg
-
-				img/food-ribs.jpg
-
-				img/food-sandwich.jpg
-
-				img/food-sausage.jpg
-
-				img/food-steak.jpg
-
-				img/food-tacos.jpg
-
-				img/food-wings.jpg
+				<img src="img/food-avocadotoast.jpg" />
+				<img src="img/food-burger.jpg" />
+				<img src="img/food-poutine.jpg" />
+				<img src="img/food-ribs.jpg" />
+				<img src="img/food-sandwich.jpg" />
+				<img src="img/food-sausage.jpg" />
+				<img src="img/food-steak.jpg" />
+				<img src="img/food-tacos.jpg" />
+				<img src="img/food-wings.jpg" />
 			</div>
 		</section>
 
@@ -125,13 +127,21 @@
 		<!-- footer -->
 		<footer>
 			<!-- email signup -->
-			Join our mailing list!
-			Sign Up
+				<section class="mailingList">
+					<h3>Join our mailing list!</h3>
+					<form>
+						<input type="text" id="footerInput" placeholder="Email Address">
+						<button>Sign Up</button>
+					</form>
+				</section>
 			<!-- nav -->
-			Menu
-			Reservations
-			Special Offers
-			Contact
+			<nav>
+                            <a href="menu.html">Menu</a> |
+                            <a href="#Reservations">Reservations</a> |
+                            <a href="#SpecialOffers">Special Offers</a> |
+                            <a href="#Contact">Contact</a>
+                        </nav>
+
 			<!-- copyright -->
 			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
 		</footer>
